--- a/repaso/pom.xml
+++ b/repaso/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>TEMA_9_DB</artifactId>
+    <artifactId>repaso</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -14,7 +14,6 @@
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -22,10 +21,6 @@
         </dependency>
 
 
-
     </dependencies>
-
-
-
 
 </project>
