--- a/TEMA_9_DB/pom.xml
+++ b/TEMA_9_DB/pom.xml
@@ -23,6 +23,22 @@
 
 
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220320</version>
+        </dependency>
+
+
+
+
     </dependencies>
 
 
