--- a/TEMA_8/untitled/pom.xml
+++ b/TEMA_8/untitled/pom.xml
@@ -5,13 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Tema8Alex</artifactId>
+    <artifactId>untitled</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+
+
 
     <dependencies>
 
@@ -36,5 +38,7 @@
 
 
     </dependencies>
+
+
 
 </project>
